--- a/_config.yml
+++ b/_config.yml
@@ -20,8 +20,7 @@ image_alt: Gihub    # image description
 # -----------SITE SETTINGS---------------#
 #========================================#: 
 author: Reems
-profile_image: #/assets/img/avatar/me.jpg #/assets/img/avatar/avatar.jpeg 
-occupation: 
+profile_image: /assets/img/avatar/me.jpg
 snippet:
 twitter: 
 github: reemstk
@@ -71,7 +70,7 @@ animate: true                                        # false or true, uses anima
 # =======================================#
 # -----------HOME PAGE  SETTINGS --------#
 #========================================#
-home_option: skills                               # options: education, skills, timeline
+home_option: timeline                               # options: education, skills, timeline
 
 # =======================================#          # These  settings are for demo purposes only, things like 
 # -----------HELP SETTINGS---------------#          #     popup toasts and tooltips designed to help new 
