--- a/_data/education.yml
+++ b/_data/education.yml
@@ -1,6 +1,6 @@
-- School: Princeton
+- School: NMIMS
   Degree: 
-  Program: School of Public and International Affairs
-  Start Date: 
-  End Date: 
+  Program: Master in Business Administration
+  Start Date: 2019
+  End Date: 2021
   Icon: /assets/img/icons/2x/princeton-crop.png      # Make this icon small, think 30px/30px
