--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ snippet:
 twitter: 
 github: reemstk
 linkedin: reemstk
-stackoverflow: ''
+stackoverflow: #''
 website: 
 codepen: 
 medium: 
@@ -65,7 +65,7 @@ footer-color: "#00334e"
 color-scheme: "#00334e"                              # options: demo | changes color scheme based on preset values 
 card-color: "#00334e"                                # Used on cards like the home highlights section
 nav-dIcon: "fas fa-caret-down"                       # Change the navbar dropdown (for mobile or small screen sizes) to any fontawesome icon. for a list of icons visit https://fontawesome.com/ 
-animate: true                                        # false or true, uses animate.css to animate certain functions
+animate: false                                        # false or true, uses animate.css to animate certain functions
 
 # =======================================#
 # -----------HOME PAGE  SETTINGS --------#
