--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,4 @@
 # =======================================#
-# -----------DUMBARTON THEME-------------#
-# ----------------By: Tyler Butler-------#
-#-----------------https://tbutler.org----#
-#========================================#
-
-# =======================================#
 # -----------BASE SETTINGS---------------#
 #========================================#
 
@@ -12,15 +6,15 @@ title: Reems
 email: 
 description: personal profile
 baseurl:                                       # the subpath of your site, e.g. /blog
-url: "https://reemstk.github.io/reemstk/"          # the base hostname & protocol for your site, e.g. http://example.com
-image: /assets/img/avatar/me - s.jpg               # used to generate site link preview
+url: "https://reemstk.github.io/"          # the base hostname & protocol for your site, e.g. http://example.com
+image: /assets/img/avatar/me.jpg              # used to generate site link preview
 image_alt: Gihub    # image description
 
 # =======================================#
 # -----------SITE SETTINGS---------------#
 #========================================#: 
 author: Reems
-profile_image: /assets/img/avatar/me - s.jpg  
+profile_image: /assets/img/avatar/me.jpg 
 snippet:
 twitter: 
 github: reemstk
