--- a/_data/education.yml
+++ b/_data/education.yml
@@ -3,4 +3,4 @@
   Program: Master in Business Administration
   Start Date: 2019
   End Date: 2021
-  Icon: /assets/img/icons/2x/princeton-crop.png      # Make this icon small, think 30px/30px
+  Icon: /assets/img/icons/nmims.png      # Make this icon small, think 30px/30px
