--- a/_data/timeline.yml
+++ b/_data/timeline.yml
@@ -1,8 +1,7 @@
 ############
 # Timeline #
 ############
-#
-events:
+#events:
   - image: "/assets/img/icons/idfc.jpg"
     date: "July 2021 - Today"
     description: "PM"
