--- a/_data/timeline.yml
+++ b/_data/timeline.yml
@@ -3,19 +3,19 @@
 ############
 events:
   - image: /assets/img/icons/idfc.jpg
-    date: "July 2021 - Today"
-    description: "PM"
+    date: July 2021 - Today
+    description: PM
   - image: /assets/img/icons/nmims.png
-    date: "July 2019 - May 2021"
-    description: "Grad Student at NMIMS"
+    date: July 2019 - May 2021
+    description: Grad Student at NMIMS
   - image: /assets/img/icons/infy.png
-    date: "June 2014 - June 2019"
-    description: "Software Engineer at Infosys"
+    date: June 2014 - June 2019
+    description: Software Engineer at Infosys
   - image: /assets/img/icons/mgu.png
-    date: "July 2010 - May 2014"
-    description: "Undergrad Student at MGU"
-  - image: ""
-    date: "June 2000 - Mar 2010"
-    description: "Student at Rajagiri"
+    date: July 2010 - May 2014
+    description: Undergrad Student at MGU
+  - image: 
+    date: June 2000 - Mar 2010
+    description: Student at Rajagiri
 # First image of the Timeline
-timeline-img: ""
+timeline-img: /assets/img/icons/mgu.png
