--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ description: personal profile
 baseurl:                                       # the subpath of your site, e.g. /blog
 url: "https://reemstk.github.io/"          # the base hostname & protocol for your site, e.g. http://example.com
 image: /assets/img/avatar/me.jpg              # used to generate site link preview
-image_alt: Gihub    # image description
+image_alt: Github    # image description
 
 # =======================================#
 # -----------SITE SETTINGS---------------#
