--- a/_data/timeline.yml
+++ b/_data/timeline.yml
@@ -11,7 +11,7 @@
   - image: /assets/img/icons/nmims.png
     date: July 2019 - May 2021
     description: Grad Student at NMIMS
-  - image: /assets/img/icons/inf0sys.png
+  - image: /assets/img/icons/infosys.jpg
     date: June 2014 - June 2019
     description: Software Engineer at Infosys
   - image: /assets/img/icons/mgu.png
