--- a/_config.yml
+++ b/_config.yml
@@ -7,8 +7,8 @@ email: reemstk.cv@gmail.com
 description: personal profile
 baseurl:                                       # the subpath of your site, e.g. /blog
 url: "https://reemstk.github.io/"          # the base hostname & protocol for your site, e.g. http://example.com
-image: /assets/img/github-mar-white.png              # used to generate site link preview
-image_alt: Github    # image description
+image: /assets/img/icons/favicon.ico              # used to generate site link preview
+image_alt: favicon    # image description
 
 #############
 # HTML Head #
@@ -18,8 +18,6 @@ favicon: "/img/favicon.ico"
 ################
 # Header layout #
 ################
-black-favicon: "/img/black-lab-glass.ico"
-logo: "../img/author.png" # leave blank if you don't want a logo
 background-img: "../img/intro-bg.gif"
 
 # =======================================#
