--- a/_data/sections.yml
+++ b/_data/sections.yml
@@ -17,10 +17,10 @@
 #  url: teaching.html
 #  first: false
 
-#- name: Projects
-#  id: projects
-#  description: Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-#  content: 
-#  url: projects.html
-#  first: false
+- name: Projects
+  id: projects
+  description: Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+  content: 
+  url: projects.html
+  first: false
 
