Update education.yml with mgu img

--- a/_data/education.yml
+++ b/_data/education.yml
@@ -9,4 +9,4 @@
   Program: 
   Start Date: 2010
   End Date: 2014
-  Icon:     # Make this icon small, think 30px/30px
+  Icon: /assets/img/icons/mgu.png   # Make this icon small, think 30px/30px
