--- a/_data/education.yml
+++ b/_data/education.yml
@@ -1,12 +1,12 @@
 - School: NMIMS
   Degree: MBA
-  Program: 
+  Program: Operations and Decision Sciences
   Start Date: 2019
   End Date: 2021
   Icon: /assets/img/icons/nmims.png    # Make this icon small, think 30px/30px
 - School: MGU
   Degree: B.Tech
-  Program: 
+  Program: Electronics and Communication Engineering
   Start Date: 2010
   End Date: 2014
   Icon: /assets/img/icons/mgu.png   # Make this icon small, think 30px/30px
