--- a/_data/courses.yml
+++ b/_data/courses.yml
@@ -1,15 +1,15 @@
-- Course: POL 554 International Security Studies
-  Program: School of Public and International Affairs  
-  School: Harvard
+- Course: Ut enim ad minim veniam
+  Program: Lorem ipsum dolor sit amet, consectetur adipiscing elit  
+  School: ABC
   id: POL554
   description: >
     Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
     Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
   link: https://example.com
 
-- Course: POL 585 International Political Economy
-  Program: School of Public and International Affairs
-  School: Harvard
+- Course: Lorem ipsum dolor sit amet
+  Program: Lorem ipsum dolor sit amet, consectetur adipiscing elit
+  School: ABC
   id: POL585
   description: >
     Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
