--- a/_data/researchinterest.yml
+++ b/_data/researchinterest.yml
@@ -1,8 +1,3 @@
-- Topic:  Investigating the integration of Artificial Intelligence (AI) within legal systems and frameworks.
-- Topic:  Innovating AI tools for legal decision-making, upholding ethical and human rights standards.
-- Topic:  Examining AI’s influence on privacy, fairness, and intellectual property in legal contexts.
-- Topic:  Enhancing the accessibility and efficiency of legal services through AI.
-- Topic:  Engineering reproducible AI models for practical legal applications.
-- Topic:  Conducting interdisciplinary research across AI, law, and social sciences to explore AI’s societal impacts.
-- Topic:  Developing responsible AI systems focused on upholding and promoting data privacy and security.
-- Topic:  Investigating the use of machine learning in detecting and mitigating bias in automated processes.
+- Topic:  Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+- Topic:  Libero id faucibus nisl tincidunt eget.
+- Topic:  Cursus metus aliquam eleifend mi in nulla posuere sollicitudin.
