Revert "Update nav.yml"
This reverts commit 2374f8e1ee72d2ae4005c09dec8838122db86516.

--- a/_data/nav.yml
+++ b/_data/nav.yml
@@ -4,8 +4,8 @@ links:
 - title: About
   url: about.html
 
-#- title: Blog
-#  url: blog.html
+- title: Blog
+  url: blog.html
 
 - title: Contact
   url: contact.html
