--- a/_data/timeline.yml
+++ b/_data/timeline.yml
@@ -4,21 +4,27 @@
 #events:
   - image: /assets/img/icons/ms.png
     date: May 2022 - Today
-    description: PM
+    description: Product Manager
   - image: /assets/img/icons/idfc.jpg
     date: July 2021 - May 2022
-    description: PM
+    description: Technology Product Manager
   - image: /assets/img/icons/nmims.png
     date: July 2019 - May 2021
-    description: Grad Student at NMIMS
+    description: Grad (MBA) at NMIMS
   - image: /assets/img/icons/infosys.png
     date: June 2014 - June 2019
-    description: Software Engineer at Infosys
+    description: Technology Analyst at Infosys
   - image: /assets/img/icons/mgu.png
     date: July 2010 - May 2014
-    description: Undergrad Student at MGU
-  - image: 
-    date: June 2000 - Mar 2010
+    description: Undergrad (BTech) at MGU
+  - image: /assets/img/icons/rps.png
+    date: June 2001 - Mar 2010
     description: Student at Rajagiri
+  - image: /assets/img/icons/vps.png
+    date: June 2000 - Mar 2001
+    description: Student at Viswajyothi
+  - image: /assets/img/icons/iis.png
+    date: Till 2000
+    description: Student at IIS - Ar'Ar
 # First image of the Timeline
-timeline-img: /assets/img/icons/mgu.png
+timeline-img: /assets/img/icons/favicon-baby.ico
