--- a/_data/timeline.yml
+++ b/_data/timeline.yml
@@ -23,7 +23,7 @@
   - image: /assets/img/icons/vps.png
     date: June 2000 - Mar 2001
     description: Student at Viswajyothi
-  - image: /assets/img/icons/iis.png
+  - image: /assets/img/icons/iis.jpg
     date: Till 2000
     description: Student at IIS - Ar'Ar
 # First image of the Timeline
