--- a/_data/timeline.yml
+++ b/_data/timeline.yml
@@ -1,7 +1,7 @@
 ############
 # Timeline #
 ############
-acad-events:
+#acad-events:
   - image: /assets/img/icons/ms.png
     date: May 2022 - Today
     description: Product Manager
