--- a/_data/timeline.yml
+++ b/_data/timeline.yml
@@ -8,23 +8,26 @@
   - image: /assets/img/icons/idfc.jpg
     date: July 2021 - May 2022
     description: Technology Product Manager
+  - image: /assets/img/icons/delhi.png
+    date: Mar 2020 - Jun 2020
+    description: Product Intern
   - image: /assets/img/icons/nmims.png
     date: July 2019 - May 2021
-    description: Grad (MBA) at NMIMS
+    description: Grad Student (MBA)
   - image: /assets/img/icons/infosys.png
     date: June 2014 - June 2019
-    description: Technology Analyst at Infosys
+    description: Technology Analyst
   - image: /assets/img/icons/mgu.png
     date: July 2010 - May 2014
-    description: Undergrad (BTech) at MGU
+    description: Undergrad Student (BTech)
   - image: /assets/img/icons/rps.png
     date: June 2001 - Mar 2010
-    description: Student at Rajagiri
+    description: Student at Rajagiri Public School
   - image: /assets/img/icons/vps.png
     date: June 2000 - Mar 2001
-    description: Student at Viswajyothi
+    description: Student at Viswajyothi Public School
   - image: /assets/img/icons/iis.jpg
     date: 1997 - 2000
     description: Student at IIS - Ar'Ar
 # First image of the Timeline
-timeline-img: /assets/img/icons/favicon-baby.ico
+- timeline-img: /assets/img/icons/favicon-baby.ico
