--- a/_data/timeline.yml
+++ b/_data/timeline.yml
@@ -8,6 +8,9 @@
   - image: /assets/img/icons/idfc.jpg
     date: July 2021 - May 2022
     description: Technology Product Manager
+  - image: /assets/img/icons/pe.png
+    date: Jan 2021 - Feb 2021
+    description: Social Work Intern
   - image: /assets/img/icons/delhi.png
     date: Mar 2020 - Jun 2020
     description: Product Intern
