--- a/_data/timeline.yml
+++ b/_data/timeline.yml
@@ -15,19 +15,19 @@
     date: Mar 2020 - Jun 2020
     description: Product Intern
   - image: /assets/img/icons/nmims.png
-    date: July 2019 - May 2021
+    date: Jun 2019 - May 2021
     description: Grad Student (MBA)
   - image: /assets/img/icons/infosys.png
-    date: June 2014 - June 2019
+    date: Jul 2014 - Mar 2019
     description: Technology Analyst
   - image: /assets/img/icons/mgu.png
-    date: July 2010 - May 2014
+    date: Jun 2010 - Jun 2014
     description: Undergrad Student (BTech)
   - image: /assets/img/icons/rps.png
-    date: June 2001 - Mar 2010
+    date: 2001 - 2010
     description: Student at Rajagiri Public School
   - image: /assets/img/icons/vps.png
-    date: June 2000 - Mar 2001
+    date: 2000 - 2001
     description: Student at Viswajyothi Public School
   - image: /assets/img/icons/iis.jpg
     date: 1997 - 2000
