--- a/_data/timeline.yml
+++ b/_data/timeline.yml
@@ -5,32 +5,42 @@
   - image: /assets/img/icons/ms.png
     date: May 2022 - Today
     description: Product Manager
+    institute: Microsoft
   - image: /assets/img/icons/idfc.jpg
     date: July 2021 - May 2022
     description: Technology Product Manager
+    institute: IDFC First Bank
   - image: /assets/img/icons/pe.png
     date: Jan 2021 - Feb 2021
     description: Social Work Intern
+    institute: Plan@Earth
   - image: /assets/img/icons/delhi.png
     date: Mar 2020 - Jun 2020
     description: Product Intern
+    institute: Delhivery
   - image: /assets/img/icons/nmims.png
     date: Jun 2019 - May 2021
     description: Grad Student (MBA)
+    institute: NMIMS
   - image: /assets/img/icons/infosys.png
     date: Jul 2014 - Mar 2019
     description: Technology Analyst
+    institute: Infosys
   - image: /assets/img/icons/mgu.png
     date: Jun 2010 - Jun 2014
     description: Undergrad Student (BTech)
+    institute: Mahatma Gandhi University
   - image: /assets/img/icons/rps.png
     date: 2001 - 2010
-    description: Student at Rajagiri Public School
+    description: Student
+    institute: Rajagiri Public School
   - image: /assets/img/icons/vps.png
     date: 2000 - 2001
-    description: Student at Viswajyothi Public School
+    description: Student
+    institute: Viswajyothi Public School
   - image: /assets/img/icons/iis.jpg
     date: 1997 - 2000
-    description: Student at IIS - Ar'Ar
+    description: Student
+    institute: International Indian School - Ar'Ar
 # First image of the Timeline
 - timeline-img: /assets/img/icons/favicon-baby.ico
